<resources>
    <string name="app_name">Road Sign Test</string>
    <string name="home_description_urdu">اس کوئز میں 190 سے زیادہ اہم سوالات ہیں۔ یہ ٹیسٹ/کوئز بار بار دیں تاکہ آپ ڈرائیونگ لائسنس کے لئے ٹریفک سائن ٹیسٹ آسانی سے پاس کر سکیں۔ آئیے اسے شروع کریں۔</string>
    <string name="btn_english_test">Start Test in English</string>
    <string name="btn_urdu_test">اردو میں ٹیسٹ دیں</string>
    <string name="btn_fee_calculator">License Fee Calculator</string>
    <string name="btn_practice">Practice</string>
    <string name="app_title_home">Traffic Signs Test</string>
    
    <string name="calc_title">Driving Licence Fee Calculator</string>
    <string name="label_province">Select Province</string>
    <string name="label_license_type">Select Licence Type</string>
    <string name="label_vehicle_type">Select Vehicle Type</string>
    <string name="label_duration">Select Duration</string>
    <string name="btn_calculate">Calculate Fee</string>
    <string name="fee_result_format">Estimated licence fee: Rs. %s</string>
    <string name="fee_not_found">Fee details not found for this selection.</string>
    <string name="disclaimer_text">Fees may vary. Confirm from official traffic police office.</string>
    
    <string name="mcq_question_number">Question %1$d / %2$d</string>
    <string name="btn_next">Next</string>
    <string name="btn_finish">Finish</string>
    <string name="score_format">Your Score: %1$d / %2$d</string>
    
    <!-- AdMob Test App ID -->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <!-- Test Banner Unit ID -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>